[package]
name = "rusty"
version = "0.1.0"
edition = "2021"
description = "A daily terminal todo app with a TUI"

[[bin]]
name = "rusty"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
